<resources>
    <string name="app_name">TodoSync</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="appTitle">To Do</string>
    <string name="Today">Today</string>
    <string name="seeAll">See All</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="todo1">Buy Fruits    07.00AM</string>
    <string name="todo2">Go  to Gym       09.00AM</string>
    <string name="todo3">Meet Naduni    10.00PM</string>
    <string name="todo4">Get Lunch     11.00PM</string>
    <string name="todo5">Do Homewrk  01.00PM</string>
    <string name="alarm">Alarm</string>
    <string name="createTask">Create New Task</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="yourTask">Your Task</string>
    <string name="dateDemo">YYYY : MM : DD</string>
    <string name="timeDemo">HH : MM : SS</string>
    <string name="pm">PM</string>
    <string name="addTodo">Add To do</string>
    <string name="editTask">Edit Task</string>
    <string name="done">Done</string>
    <string name="editTodo">Edit To Do</string>
    <string name="deleteTodo">Delete To Do</string>
    <string name="edit1">Task Name:   Buy Fruits</string>
    <string name="edit2">Date     :   2024 March 10</string>
    <string name="edit3">Time     :   07.00 AM</string>
    <string name="next">NEXT</string>
    <string name="signup">Sign Up</string>
    <string name="forget">Forget password?</string>
    <string name="already">Already have an Account ?</string>
    <string name="profile">Profile</string>
    <string name="Marco">Kaveesha</string>
    <string name="email">Divyanjalee@gmail.com</string>
    <string name="sample1">Archived tasks : 6</string>
    <string name="sample2">Added tasks : 5</string>
    <string name="setting">Settings</string>
    <string name="history">History</string>
    <string name="theme">Theme</string>
    <string name="notification">Notification</string>
    <string name="about">About To Do</string>
    <string name="aboutpa">To do app is the product of the Kaveesha technologies and All Rights Reserved.</string>
    <string name="version">V 1.0.0</string>
    <string name="viewTask">View To do</string>
</resources>