<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_background"
    tools:context=".EdittaskInterfaceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="283dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/done"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.892" />

            <FrameLayout
                android:layout_width="290dp"
                android:layout_height="73dp"
                android:background="@drawable/todo_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.189">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80sp"
                    android:layout_marginTop="20sp"
                    android:text="@string/yourTask"
                    android:textColor="@color/lightPurple"
                    android:textSize="20sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="290dp"
                android:layout_height="73dp"
                android:background="@drawable/todo_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.369">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70sp"
                    android:layout_marginTop="20sp"
                    android:text="@string/dateDemo"
                    android:textColor="@color/lightPurple"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="26dp"
                    android:layout_height="31dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="240sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/uil_calender" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="142dp"
                android:layout_height="73dp"
                android:background="@drawable/todo_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.23"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.566">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="20sp"
                    android:text="@string/timeDemo"
                    android:textColor="@color/lightPurple"
                    android:textSize="20sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="73dp"
                android:background="@drawable/todo_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.801"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.563">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="20sp"
                    android:text="@string/pm"
                    android:textColor="@color/lightPurple"
                    android:textSize="20sp" />
            </FrameLayout>

            <Switch
                android:id="@+id/switch10"
                android:layout_width="270dp"
                android:layout_height="74dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/alarm"
                android:textColor="@color/thicBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.715" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/editTask"
                android:textColor="@color/thicBlack"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.044" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/task"
                android:textColor="@color/thicBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.164"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.135" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/date"
                android:textColor="@color/thicBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.166"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.303" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/time"
                android:textColor="@color/thicBlack"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.487" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="33dp"
                android:layout_height="39dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.158"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043"
                app:srcCompat="@drawable/fluent_mdl2_navigate_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>